scripts/nullness/original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8.txt
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:7: error: [initialization.static.field.uninitialized] static field variableList not initialized
	private static ArrayList<VariableInformation> variableList;
	                                              ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperPostParser.java:10: error: [initialization.field.uninitialized] the default constructor does not initialize field parseTree
	private ParseTree parseTree;
	                  ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:23: error: [initialization.field.uninitialized] the default constructor does not initialize field lexer
	private EsperLexer lexer;
	                   ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:24: error: [initialization.field.uninitialized] the default constructor does not initialize field parseRoot
	private ParseTree parseRoot;
	                  ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:25: error: [initialization.field.uninitialized] the default constructor does not initialize field variableList
	private ArrayList<VariableInformation> variableList;
	                                       ^
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:174: error: [argument] incompatible argument for parameter obj of Field.getInt.
					if (field.getInt(null) == tokenType) {
					                 ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
6 errors
